@@ -1,5 +1,6 @@
 \-- release 2.6.4
 
+  * gRPC server will follow the same behavior as NIO HTTP server: reject with Status.FAILED_PRECONDITION when health check failed and reject with Status.UNAVAILABLE when service is paused.
   * Deprecated SummerRunner and replace SummerRunner.run() with AppLifecycleListener.beforeApplicationStart()
   * updated log4j2.xml
   * AppLifecycleHandler handles onIdle event for both NIO HTTP server and gRPC server, implemented with two internal API changes:
